# cookmate-ai

./: .gitignore  README.md  mlflow.db  pyproject.toml
data/processed/: recipes_clean.json
notebooks/: data_curation.ipynb  exploration.ipynb
prompts/: recipe_agent_system_prompt.md
src/cookmate/backend/: agents.py  api.py  data_models.py
src/cookmate/frontend/: app.py
src/cookmate/monitoring/: mlflow_prompts.py
src/cookmate/setup/: ingestion.py
src/cookmate/utils/: config.py
